// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css template generates dark colors 1`] = `
Array [
  Array [
    "colors.css",
    ":root {
  --rnpc-string-color: #ffffff;
  --rnpc-alpha-color: #ff000080;
}

@media (prefers-color-scheme: dark) {
  :root {
    --rnpc-string-color: #000000;
    --rnpc-alpha-color: #ffc8c880;
  }
}",
  ],
]
`;

exports[`css template generates high contrast colors 1`] = `
Array [
  Array [
    "colors.css",
    ":root {
  --rnpc-string-color: #cccccc;
}

@media (prefers-contrast: high) {
  :root {
    --rnpc-string-color: #ffffff99;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --rnpc-string-color: #33333399;
  }
}

@media (prefers-contrast: high) and (prefers-color-scheme: dark) {
  :root {
    --rnpc-string-color: #000000;
  }
}",
  ],
]
`;

exports[`css template generates light colors 1`] = `
Array [
  Array [
    "colors.css",
    ":root {
  --rnpc-string-color: #ffffff;
  --rnpc-alpha-color: #ff000080;
  --rnpc-named-color: #0000ff;
}",
  ],
]
`;
